syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "protobuf/gogoproto/gogo.proto";

package storage;


// Any properties of an individual service account.
// (regardless of time, scope, or context)
//////////////////////////////////////////
message ServiceAccount {
    string              id                  = 1 [(gogoproto.moretags) = "search:\"Service Account ID,store,hidden\""];
    string              name                = 2 [(gogoproto.moretags) = "search:\"Service Account,store\""];
    string              namespace           = 3 [(gogoproto.moretags) = "search:\"Namespace,store\""];
    string              cluster_name        = 4 [(gogoproto.moretags) = "search:\"Cluster,store\""];
    string              cluster_id          = 5;
    google.protobuf.Timestamp created_at    = 6;
    bool                automount_token     = 7;

    repeated string secrets                 = 8;
    repeated string image_pull_secrets      = 9;
}
